# tope

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  README.txt  build.bat
examples/: example_planes.c  example_pointcloud.c
exe/: main.c
include/: polytoop.h  tope.h
src/: alloca.h  allocator.c  allocator.h  array.c  array.h  hashmap.c  hashmap.h  linprog.c  list.c  list.h  math.c  math.h  polytoop.c  tope.c  types.h  util.c  util.h
tests/: test_4dcube.c  test_allocator.c  test_delaunay.c  test_hypercube.c  test_linprog.c  test_planes.c  test_pointcloud.c
